--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONTS-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+ 
+<!--/FONTS-->
+  
     <link rel="stylesheet" href="./css/style.css">
     <title>Memory</title>
 </head>
 <body>
+  
+    <div class="container">
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
     
 </body>
 </html>
