--- a/index.html
+++ b/index.html
@@ -11,14 +11,27 @@
 <!--/FONTS-->
   
     <link rel="stylesheet" href="./css/style.css">
-    <title>Memory</title>
+    <title>Memory Game</title>
 </head>
 <body>
   
-    <div class="container">
-
-
-
+    <div class="container clearfix">
+            <h1 class="title">Memory Game</h1>
+            <div class="cards">
+                 <div class="face-down card"></div>
+                 <div class="face-down card"></div>
+                 <div class="face-down card"></div>
+                 <div class="face-down card"></div>
+            </div>
+         
+            <div class="cards">
+                <div class="face-down card"></div>
+                <div class="face-down card"></div>
+                <div class="face-down card"></div>
+                <div class="face-down card"></div>
+           </div>
+        
+ 
 
 
 
