--- a/index.html
+++ b/index.html
@@ -17,20 +17,26 @@
   
     <div class="container clearfix">
             <h1 class="title">Memory Game</h1>
-            <div class="cards">
+            <div class="cards first row">
                  <div class="face-down card"></div>
                  <div class="face-down card"></div>
                  <div class="face-down card"></div>
                  <div class="face-down card"></div>
             </div>
          
-            <div class="cards">
+            <div class="cards second row">
                 <div class="face-down card"></div>
-                <div class="face-down card"></div>
+                <div class="face-up card"></div>
                 <div class="face-down card"></div>
                 <div class="face-down card"></div>
            </div>
         
+           <div class="cards second row">
+            <div class="face-down card"></div>
+            <div class="face-up card"></div>
+            <div class="face-down card"></div>
+            <div class="face-down card"></div>
+       </div>
  
 
 
