--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
          
             <div class="cards second row">
                 <div class="face-down card"></div>
-                <div class="face-up card"></div>
+                <div class="face-up card">
+                     <h2 class="card-title">Air baloon</h2>
+                </div>
                 <div class="face-down card"></div>
                 <div class="face-down card"></div>
            </div>
         
-           <div class="cards second row">
+           <div class="cards third row">
             <div class="face-down card"></div>
-            <div class="face-up card"></div>
+            <div class="face-down card"></div>
             <div class="face-down card"></div>
             <div class="face-down card"></div>
        </div>
