--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- FONTS-->
+  
+    <!-- FONTS-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
  
@@ -18,35 +19,28 @@
     <div class="container clearfix">
             <h1 class="title">Memory Game</h1>
             <div class="cards first row">
-                 <div class="face-down card"></div>
-                 <div class="face-down card"></div>
-                 <div class="face-down card"></div>
-                 <div class="face-down card"></div>
+                 <div id="one" class="face-down card">Air ballon</div>
+                 <div id="two" class="face-down card"></div>
+                 <div id="three" class="face-down card"></div>
+                 <div id="four" class="face-down card"></div>
             </div>
          
             <div class="cards second row">
-                <div class="face-down card"></div>
-                <div class="face-up card">
-                     <h2 class="card-title">Air baloon</h2>
+                <div id="five" class="face-down card"></div>
+                <div id="six" class="face-up card">
+                     <h2 class="card-title">Air balloon</h2>
                 </div>
-                <div class="face-down card"></div>
-                <div class="face-down card"></div>
+                <div id="seven" class="face-down card"></div>
+                <div id="eight" class="face-down card"></div>
            </div>
         
            <div class="cards third row">
-            <div class="face-down card"></div>
-            <div class="face-down card"></div>
-            <div class="face-down card"></div>
-            <div class="face-down card"></div>
+            <div id="nine" class="face-down card"></div>
+            <div id="ten" class="face-down card"></div>
+            <div id="eleven" class="face-down card"></div>
+            <div id="twelve" class="face-down card"></div>
        </div>
  
-
-
-
-
-
-
-
 
 
     </div>
