--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          
             <div class="cards second row">
                 <div id="five" class="face-down card"></div>
-                <div id="six" class="face-up card">
+                <div id="notsix" class="face-up card">
                      <h2 class="card-title">Air balloon</h2>
                 </div>
                 <div id="seven" class="face-down card"></div>
