--- a/index.html
+++ b/index.html
@@ -19,28 +19,50 @@
     <div class="container clearfix">
             <h1 class="title">Memory Game</h1>
             <div class="cards first row">
-                 <div id="one" class="face-down card"><h2>Air balloon</h2></div>
-                 <div id="two" class="face-down card"><h2>Bicycle</h2></div>
-                 <div id="three" class="face-down card"><h2>Cruise Ship</h2></div>
-                 <div id="four" class="face-down card"><h2>Submarine</h2></div>
+                 <div id="one" class="face-down card">
+                     <h2>Air balloon</h2>
+                 </div>
+                 <div id="two" class="face-down card">
+                     <h2>Bicycle</h2>
+                 </div>
+                 <div id="three" class="face-down card">
+                     <h2>Cruise Ship</h2>
+                 </div>
+                 <div id="four" class="face-down card">
+                     <h2>Submarine</h2>
+                 </div>
             </div>
          
             <div class="cards second row">
-                <div id="five" class="face-down card"><h2>Tractor</h2></div>
+                <div id="five" class="face-down card">
+                     <h2>Tractor</h2>
+                </div>
                 <div id="notsix" class="face-up card">
                      <h2 class="card-title">Air balloon</h2>
                 </div>
-                <div id="seven" class="face-down card"><h2>Tram</h2></div>
-                <div id="eight" class="face-down card"><h2>Tram</h2></div>
+                <div id="seven" class="face-down card">
+                    <h2>Tram</h2>
+                </div>
+                <div id="eight" class="face-down card">
+                    <h2>Tram</h2>
+                </div>
            </div>
         
            <div class="cards third row">
-            <div id="nine" class="face-down card"><h2>Tractor</h2></div>
-            <div id="ten" class="face-down card"><h2>Submarine</h2></div>
-            <div id="eleven" class="face-down card"><h2>Bicycle</h2></div>
-            <div id="twelve" class="face-down card"><h2>Cruise Ship</h2></div>
+                <div id="nine" class="face-down card">
+                    <h2>Tractor</h2>
+                </div>
+                <div id="ten" class="face-down card">
+                    <h2>Submarine</h2>
+                </div>
+                <div id="eleven" class="face-down card">
+                    <h2>Bicycle</h2>
+                </div>
+                <div id="twelve" class="face-down card">
+                    <h2>Cruise Ship</h2>
+                </div>
        </div>
-       <div><h3>from Team Boolen</h3></div>
+       <div><h3>from Team Boolean</h3></div>
 
 
     </div>
